# redactor

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  TODO.md  mise.toml  notes  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: RELEASE.md
redactor/: __init__.py  paths.py  redact.py  unredact.py
tests/: conftest.py  test_allowlist_cli.py  test_allowlist_coverage.py  test_binary_and_errors.py  test_cli_meta.py  test_coverage_boost.py  test_dictionary_hygiene.py  test_exclude_and_dry_run.py  test_gitignore.py  test_output_modes.py  test_paths.py  test_patterns.py  test_patterns_cli.py  test_redact.py  test_roundtrip.py  test_unredact.py  test_validate_and_edge_cases.py
