[project]
name = "redactor"
version = "0.2.0"
description = "Redact and restore sensitive values in local files"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
redact = "redactor.redact:main"
unredact = "redactor.unredact:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["redactor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["redactor"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 90
